# ML_Module_1

./: .gitignore  README.md  pyproject.toml
mlruns/0/: meta.yaml
src/mlwithcats/catboost_info/: catboost_training.json  time_left.tsv
src/mlwithcats/catboost_info/learn/: events.out.tfevents
src/mlwithcats/code/: __init__.py  model.py
src/mlwithcats/code/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/mlwithcats/code/catboost_info/learn/: events.out.tfevents
src/mlwithcats/code/mlruns/0/: meta.yaml
src/mlwithcats/code/model/: MLmodel  conda.yaml  model.cb  requirements.txt
src/mlwithcats/mlruns/0/: meta.yaml
src/mlwithcats/predictions/: result.csv
