[project]
name = "mlwithcats"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya_Uymanov",email = "ninjaxxxflame@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=1.16.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "catboost (>=1.2.7,<2.0.0)"
]

[tool.poetry]
packages = [{include = "mlwithcats", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
